--- a/env.example
+++ b/env.example
@@ -6,6 +6,12 @@ NEXT_PUBLIC_API_URL=https://api.example.com
 # Your production domain (used for absolute URLs in sitemap, meta tags, etc.)
 NEXT_PUBLIC_SITE_URL=https://yourdomain.com
 
+# Authentication
+# Secret key for NextAuth.js (generate a random string for production)
+# Generate one with: openssl rand -base64 32
+NEXTAUTH_SECRET=your-super-secret-key-here-change-in-production
+NEXTAUTH_URL=http://localhost:3000
+
 # Optional: API Authentication
 # If your API requires authentication, add the key here
 # API_KEY=your-api-key-here
